# asciidoc-linter

./: .asciidoc-lint.yml.example  .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  Dockerfile  README.adoc  archive.html  feed.xml  index.html  lunrjsindex.js  old_readme.txt  pyproject.toml  requirements-dev.txt  run_tests_html.py  search.html  setup.py  setup_test_environment.sh  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: asciidoc-linter-action.yml  claude-code-review.yml  gh-pages.yml  run-tests-and-lint.yml  test.yml
arc42/: 01_introduction_and_goals.html  02_architecture_constraints.html  03_system_scope_and_context.html  04_solution_strategy.html  05_building_block_view.html  06_runtime_view.html  07_deployment_view.html  08_concepts.html  09_architecture_decisions.html  10_quality_requirements.html  11_technical_risks.html  12_glossary.html  index.html
arc42/decisions/: ADR-001-rule-base-class-draft.html  ADR-002-finding-data-structure-draft.html  ADR-004-test-strategy-draft.html  (+4 more)
asciidoc_linter/: cli.py  config.py  linter.py  parser.py  reporter.py
canvas/: architecture-canvas.html
docs/: block_rules.adoc  configuration.adoc  development.adoc  implementation_plan.adoc  requirements.adoc
manual/: development.html  index.html  introduction.html  rules.html  testing.html  usage.html
readme/: README.html
test-results/: 01-unit-tests.html  02-coverage.html  report.html  test-report.html
tests/: test_cli.py  test_config.py  test_linter.py  test_precommit_hooks.py  test_reporter.py  test_rule_disabling.py  test_table_rules.py
(+41 files in other folders)
